[gd_scene load_steps=58 format=2]

[ext_resource path="res://assets/Boss_2/minotaur_walk(0).tres" type="Texture" id=1]
[ext_resource path="res://assets/Boss_2/minotaur_walk(1).tres" type="Texture" id=2]
[ext_resource path="res://assets/Boss_2/minotaur_walk(2).tres" type="Texture" id=3]
[ext_resource path="res://assets/Boss_2/minotaur_walk(3).tres" type="Texture" id=4]
[ext_resource path="res://assets/Boss_2/minotaur_walk(5).tres" type="Texture" id=5]
[ext_resource path="res://assets/Boss_2/minotaur_walk(4).tres" type="Texture" id=6]
[ext_resource path="res://assets/Boss_2/minotaur_walk(6).tres" type="Texture" id=7]
[ext_resource path="res://assets/Boss_2/minotaur_walk(7).tres" type="Texture" id=8]
[ext_resource path="res://scenes/Minotaur.gd" type="Script" id=9]
[ext_resource path="res://assets/Boss_2/minotaur_attack(0).tres" type="Texture" id=10]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(1).tres" type="Texture" id=11]
[ext_resource path="res://assets/Boss_2/minotaur_attack(2).tres" type="Texture" id=12]
[ext_resource path="res://assets/Boss_2/minotaur_attack(3).tres" type="Texture" id=13]
[ext_resource path="res://assets/Boss_2/minotaur_attack(4).tres" type="Texture" id=14]
[ext_resource path="res://assets/Boss_2/minotaur_attack(5).tres" type="Texture" id=15]
[ext_resource path="res://assets/Boss_2/minotaur_attack(6).tres" type="Texture" id=16]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(4).tres" type="Texture" id=17]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(3).tres" type="Texture" id=18]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(7).tres" type="Texture" id=19]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(8).tres" type="Texture" id=20]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(6).tres" type="Texture" id=21]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(2).tres" type="Texture" id=22]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(9).tres" type="Texture" id=23]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(0).tres" type="Texture" id=24]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(5).tres" type="Texture" id=25]
[ext_resource path="res://assets/Boss_2/mintour_attack_fire(10).tres" type="Texture" id=26]
[ext_resource path="res://assets/Boss_2/minotaur_death(1).tres" type="Texture" id=27]
[ext_resource path="res://assets/Boss_2/minotaur_death(3).tres" type="Texture" id=28]
[ext_resource path="res://assets/Boss_2/minotaur_death(4).tres" type="Texture" id=29]
[ext_resource path="res://assets/Boss_2/minotaur_death(0).tres" type="Texture" id=30]
[ext_resource path="res://assets/Boss_2/minotaur_death(2).tres" type="Texture" id=31]
[ext_resource path="res://assets/Boss_2/minotaur_death(5).tres" type="Texture" id=32]
[ext_resource path="res://assets/Boss_2/minotaur_furia(13).tres" type="Texture" id=33]
[ext_resource path="res://assets/Boss_2/minotaur_furia(14).tres" type="Texture" id=34]
[ext_resource path="res://assets/Boss_2/minotaur_furia(3).tres" type="Texture" id=35]
[ext_resource path="res://assets/Boss_2/minotaur_furia(4).tres" type="Texture" id=36]
[ext_resource path="res://assets/Boss_2/minotaur_furia(9).tres" type="Texture" id=37]
[ext_resource path="res://assets/Boss_2/minotaur_furia(7).tres" type="Texture" id=38]
[ext_resource path="res://assets/Boss_2/minotaur_furia(6).tres" type="Texture" id=39]
[ext_resource path="res://assets/Boss_2/minotaur_furia(11).tres" type="Texture" id=40]
[ext_resource path="res://assets/Boss_2/minotaur_furia(10).tres" type="Texture" id=41]
[ext_resource path="res://assets/Boss_2/minotaur_furia(2).tres" type="Texture" id=42]
[ext_resource path="res://assets/Boss_2/minotaur_furia(12).tres" type="Texture" id=43]
[ext_resource path="res://assets/Boss_2/minotaur_furia(5).tres" type="Texture" id=44]
[ext_resource path="res://assets/Boss_2/minotaur_furia(8).tres" type="Texture" id=45]
[ext_resource path="res://assets/Boss_2/minotaur_furia(1).tres" type="Texture" id=46]
[ext_resource path="res://assets/Boss_2/minotaur_furia(0).tres" type="Texture" id=47]
[ext_resource path="res://assets/Boss_2/minotaur_furia(17).tres" type="Texture" id=48]
[ext_resource path="res://assets/Boss_2/minotaur_furia(18).tres" type="Texture" id=49]
[ext_resource path="res://assets/Boss_2/minotaur_furia(16).tres" type="Texture" id=50]
[ext_resource path="res://assets/Boss_2/minotaur_furia(19).tres" type="Texture" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 44 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 50 ), ExtResource( 48 ), ExtResource( 51 ), ExtResource( 49 ) ],
"loop": true,
"name": "furia",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 27 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 29 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 23 ) ],
"loop": true,
"name": "attack_Fire",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.4025
height = 33.7496

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 209.296, 55.0293 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46.0979, 52.8808 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19.7642, 12.083 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.9211, 15.0641 )

[node name="Minotaur" type="KinematicBody2D"]
position = Vector2( -18.4327, -24.3788 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( -1, 1 )
frames = SubResource( 1 )
animation = "furia"
frame = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18.1885, 25.1273 )
scale = Vector2( -1, 1 )
shape = SubResource( 2 )

[node name="CanFollow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanFollow"]
position = Vector2( -113.859, 31.6633 )
scale = Vector2( -1, 1 )
shape = SubResource( 3 )

[node name="CanAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanAttack"]
position = Vector2( -10.2221, 28.9246 )
shape = SubResource( 4 )

[node name="Attack_fire" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_fire"]
position = Vector2( -31.2159, 54.9059 )
shape = SubResource( 5 )

[node name="Attack" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Attack"]
position = Vector2( -33.2015, 27.3788 )
build_mode = 1
polygon = PoolVector2Array( 69.6797, -87.1593, 55.0877, -88.843, 37.6895, -83.7919, 20.8526, -75.3734, 10.1892, -64.71, 0.087059, -51.8017, -9.45387, -34.4036, -13.3825, -13.0768, -15.0662, -0.729691, -15.0662, 13.8623, 11.2022, 11.4217, 10.8053, -13.5799, 23.0975, -43.3833, 39.9345, -61.3426, 64.6286, -65.2713 )

[node name="Attack_investida" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_investida"]
position = Vector2( -24.386, 27.3291 )
shape = SubResource( 6 )

[node name="attack_punch" type="Area2D" parent="."]
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="attack_punch"]
position = Vector2( -10.1197, -16.2709 )
build_mode = 1
polygon = PoolVector2Array( -8.31875, 5.51783, -8.51718, 0.358772, -11.0967, 4.92255, -12.0888, 4.5257, -10.8983, -2.6176, -8.91403, -5.19713, -8.51718, -8.96721, -7.9219, -13.3326, -10.5014, -10.5546, -11.2951, -12.3404, -5.73922, -21.6664, -11.2951, -18.4916, -11.2951, -19.0869, -0.580164, -33.7704, 14.1033, -34.1672, 17.0797, -30.1987, 18.0718, -23.8491, 17.0797, -13.531, 15.2938, -7.37981, 13.3096, -4.00658, 9.14266, -1.62548, 3.38833, 4.12885, 0.213537, 16.4312, -1.77072, 22.5824, -3.75497, 23.5745, -5.14395, 18.6139 )

[node name="PickAnotherAttack" type="Timer" parent="."]
[connection signal="body_entered" from="CanFollow" to="." method="_on_CanFollow_body_entered"]
[connection signal="body_entered" from="CanAttack" to="." method="_on_CanAttack_body_entered"]
[connection signal="body_exited" from="CanAttack" to="." method="_on_CanAttack_body_exited"]
[connection signal="body_entered" from="Attack_fire" to="." method="_on_Attack_fire_body_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_entered" from="Attack_investida" to="." method="_on_Attack_investida_body_entered"]
[connection signal="body_entered" from="attack_punch" to="." method="_on_attack_punch_body_entered"]
[connection signal="timeout" from="PickAnotherAttack" to="." method="_on_PickAnotherAttack_timeout"]
